// Code generated by go2proto. DO NOT EDIT.
syntax = "proto3";

package xyz.block.ftl.controller.events.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/TBD54566975/ftl/backend/protos/xyz/block/ftl/controller/events/v1;eventspb";
option java_multiple_files = true;

message ControllerEvent {
  oneof value {
    DeploymentActivatedEvent deployment_activated_event = 4;
    DeploymentArtefactCreatedEvent deployment_artefact_created_event = 6;
    DeploymentCreatedEvent deployment_created_event = 1;
    DeploymentDeactivatedEvent deployment_deactivated_event = 5;
    DeploymentReplicasUpdatedEvent deployment_replicas_updated_event = 3;
    DeploymentSchemaUpdatedEvent deployment_schema_updated_event = 2;
    RunnerDeletedEvent runner_deleted_event = 8;
    RunnerRegisteredEvent runner_registered_event = 7;
  }
}

message Decl {
  oneof value {}
}

message DeploymentActivatedEvent {
  string key = 1;
  string activated_at = 2;
  int64 min_replicas = 3;
}

message DeploymentArtefact {
  string digest = 1;
  string path = 2;
  bool executable = 3;
}

message DeploymentArtefactCreatedEvent {
  string digest = 1;
}

message DeploymentCreatedEvent {
  string key = 1;
  string created_at = 2;
  string module = 3;
  Module schema = 4;
  repeated DeploymentArtefact artefacts = 5;
  string language = 6;
}

message DeploymentDeactivatedEvent {
  string key = 1;
  bool module_removed = 2;
}

message DeploymentReplicasUpdatedEvent {
  string key = 1;
  int64 replicas = 2;
}

message DeploymentSchemaUpdatedEvent {
  string key = 1;
  Module schema = 2;
}

message Metadata {
  oneof value {}
}

message Module {
  optional Position pos = 1;
  repeated string comments = 2;
  bool builtin = 3;
  string name = 4;
  repeated Metadata metadata = 6;
  repeated Decl decls = 5;
  ModuleRuntime runtime = 31634;
}

message ModuleRuntime {
  ModuleRuntimeBase base = 1;
  optional ModuleRuntimeScaling scaling = 2;
  optional ModuleRuntimeDeployment deployment = 3;
}

message ModuleRuntimeBase {
  string create_time = 1;
  string language = 2;
  optional string os = 3;
  optional string arch = 4;
  optional string image = 5;
}

message ModuleRuntimeDeployment {
  string endpoint = 1;
  string deployment_key = 2;
}

message ModuleRuntimeScaling {
  int32 min_replicas = 1;
}

message Position {
  string filename = 1;
  int64 line = 2;
  int64 column = 3;
}

message RunnerDeletedEvent {
  string key = 1;
}

message RunnerRegisteredEvent {
  string key = 1;
  string time = 2;
  string endpoint = 3;
  string module = 4;
  string deployment = 5;
}
